--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,16 +2,7 @@
 
 name: CI
 
-# Controls when the action will run.
-on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: [push, pull_request,workflow_dispatch]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -34,4 +25,4 @@ jobs:
       - name: Run a multi-line script
         run: |
           git clone https://github.com/aiharos/github-actions.git
-          go run github-actions/check-commit/check.go
+          cd github-actions/check-commit; go run check.go
